# rs-crates-mods

./: Cargo.toml  README.md
outer_crate/: Cargo.toml
outer_crate/src/: lib.rs
src/: file.rs  main.rs
src/dir/: mod.rs
src/dir/submod/: mod.rs
src/inner_crate/: Cargo.toml
src/inner_crate/src/: lib.rs
