# This is the config file for the project's outer crate, identified by 
#   ../outer_create/src/lib.rs relative to the primary crate (src/main.rs).

[package]
name = "outer_crate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
