# This is the config file for the project's inner crate, identified by 
#   ./src/inner_create/src/lib.rs relative to the primary crate (src/main.rs).

[package]
name = "inner_crate"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
